# Fireblade

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md
Dependencies/: CMakeLists.txt
Dependencies/FreeImage/: CMakeLists.txt
Dependencies/freetype/: CMakeLists.txt
Dependencies/harfbuzz/: CMakeLists.txt  README.md
Dependencies/imgui/: CMakeLists.txt
Dependencies/imgui/backends/: imgui_impl_dx10.cpp  imgui_impl_dx10.h  imgui_impl_dx11.h  imgui_impl_dx9.h  imgui_impl_glfw.cpp  imgui_impl_metal.h  imgui_impl_metal.mm  imgui_impl_opengl2.cpp  imgui_impl_opengl2.h  imgui_impl_osx.h  imgui_impl_osx.mm  imgui_impl_vulkan.cpp  imgui_impl_vulkan.h
Dependencies/imgui/docs/: CHANGELOG.txt  TODO.txt
Dependencies/imgui/examples/example_allegro5/: main.cpp
Dependencies/imgui/examples/example_apple_opengl2/: main.mm
Dependencies/imgui/examples/example_emscripten_opengl3/: main.cpp
Dependencies/imgui/examples/example_glfw_metal/: main.mm
Dependencies/imgui/examples/example_glfw_opengl2/: example_glfw_opengl2.vcxproj  main.cpp
Dependencies/imgui/examples/example_glfw_opengl3/: example_glfw_opengl3.vcxproj  main.cpp
Dependencies/imgui/examples/example_glfw_vulkan/: example_glfw_vulkan.vcxproj  main.cpp
Dependencies/imgui/examples/example_glut_opengl2/: main.cpp
Dependencies/imgui/examples/example_sdl_directx11/: example_sdl_directx11.vcxproj  main.cpp
Dependencies/imgui/examples/example_sdl_metal/: main.mm
Dependencies/imgui/examples/example_sdl_opengl2/: example_sdl_opengl2.vcxproj  main.cpp
Dependencies/imgui/examples/example_sdl_opengl3/: example_sdl_opengl3.vcxproj  main.cpp
Dependencies/imgui/examples/example_sdl_sdlrenderer/: main.cpp
Dependencies/imgui/examples/example_sdl_vulkan/: example_sdl_vulkan.vcxproj  main.cpp
Dependencies/imgui/examples/example_win32_directx10/: example_win32_directx10.vcxproj  main.cpp
Dependencies/imgui/examples/example_win32_directx11/: example_win32_directx11.vcxproj  main.cpp
Dependencies/imgui/examples/example_win32_directx12/: example_win32_directx12.vcxproj  main.cpp
Dependencies/imgui/examples/example_win32_directx9/: example_win32_directx9.vcxproj  main.cpp
Dependencies/imgui/misc/freetype/: README.md  imgui_freetype.cpp
Dependencies/minizip/: CMakeLists.txt
Dependencies/minizip/source/: iowin32.c
Dependencies/nativefiledialog/: CMakeLists.txt
Dependencies/ois/: CMakeLists.txt
Dependencies/physx/: readme_android.html  readme_ios.html  readme_linux.html  readme_osx.html  readme_win.html  release_notes.html  version-PhysX.txt
Dependencies/physx/Include/common/: PxPhysXCommonConfig.h
Dependencies/physx/Include/cooking/: Pxc.h
Dependencies/physx/Include/foundation/: PxPreprocessor.h
Dependencies/physx/Lib/vc14win32/: PhysX3CharacterKinematicDEBUG_x86.exp  PhysX3CommonDEBUG_x86.exp  PhysX3CookingDEBUG_x86.exp  PhysX3DEBUG_x86.exp
Dependencies/physx/Samples/SampleBase/: AcclaimLoader.cpp  AcclaimLoader.h  Dummy.cpp  InputEventBuffer.cpp  InputEventBuffer.h  ParticleEmitter.cpp  ParticleEmitter.h  ParticleEmitterPressure.cpp  ParticleEmitterPressure.h  ParticleEmitterRate.cpp  ParticleEmitterRate.h  ParticleFactory.cpp  ParticleFactory.h  ParticleSystem.cpp  ParticleSystem.h  PhysXSample.cpp  PhysXSample.h  PhysXSampleApplication.cpp  PhysXSampleApplication.h  Picking.cpp  Picking.h  RawLoader.cpp  RawLoader.h  RaycastCCD.cpp  RaycastCCD.h  RenderBaseActor.cpp  RenderBaseActor.h  RenderBaseObject.cpp  RenderBaseObject.h  RenderBoxActor.cpp  RenderBoxActor.h  RenderCapsuleActor.cpp  RenderCapsuleActor.h  RenderClothActor.cpp  RenderClothActor.h  RenderGridActor.cpp  RenderGridActor.h  RenderMaterial.cpp  RenderMaterial.h  RenderMeshActor.cpp  (+49 more)
Dependencies/physx/Samples/SampleBridges/: SampleBridges.cpp  SampleBridges.h  SampleBridgesCCT.cpp  SampleBridgesInputEventIds.h  SampleBridgesSettings.h
Dependencies/physx/Samples/SampleCCTSharedCode/: KinematicPlatform.cpp  KinematicPlatform.h  SampleCCTActor.cpp  SampleCCTActor.h  SampleCCTCameraController.cpp  SampleCCTCameraController.h  SampleCCTJump.cpp  SampleCCTJump.h
Dependencies/physx/Samples/SampleCharacterCloth/: SampleCharacterCloth.h  SampleCharacterClothCameraController.cpp  SampleCharacterClothCameraController.h  SampleCharacterClothFlag.cpp  SampleCharacterClothFlag.h  SampleCharacterClothInputEventIds.h  SampleCharacterClothJump.cpp  SampleCharacterClothJump.h  SampleCharacterClothPlatform.h  SampleCharacterClothSettings.h  SampleCharacterCloth_CCT.cpp  SampleCharacterCloth_ClothController.cpp  SampleCharacterCloth_FilterShader.cpp  SampleCharacterCloth_Main.cpp  SampleCharacterCloth_Platform.cpp  SampleCharacterCloth_PlatformBuilder.cpp  SampleCharacterCloth_TerrainBuilder.cpp
Dependencies/physx/Samples/SampleCustomGravity/: Planet.cpp  Planet.h  SampleCustomGravity.cpp  SampleCustomGravity.h  (+6 more)
Dependencies/physx/Source/: CMakeLists.txt
Dependencies/rttr/: CMakeLists.txt
Dependencies/sds_library/: .gitignore
Dependencies/simplefilewatcher/: CMakeLists.txt
Dependencies/simplefilewatcher/source/: FileWatcherOSX.cpp  FileWatcherWin32.cpp
Dependencies/tbb/: CMakeLists.txt  install.sh
Dependencies/tinyxml/: CMakeLists.txt
Dependencies/tinyxml/src/: tinyXmlTest.vcxproj  tinyXmlTestSTL.vcxproj  tinyxml.sln  tinyxmlSTL.vcxproj  tinyxml_lib.vcxproj
Dependencies/windows/: getopt.c  unistd.h
Dependencies/yaml-cpp/: CMakeLists.txt
Dependencies/zlib/: CMakeLists.txt
Dependencies/zlib/include/: gzguts.h
Dependencies/zlib/source/: inftrees.c  trees.c
Dependencies/zzip/: CMakeLists.txt
Dependencies/zzip/source/: dir.c  file.c  zzip_zip.c
FBEngine/cpp/: CMakeLists.txt
Samples/Application/: Application.cpp  Application.h  CMakeLists.txt  main.cpp
Samples/Game/: CMakeLists.txt  Game.cpp  Game.h  Types.cpp  Types.h
Samples/HelloWorld/: CMakeLists.txt  HelloWorld.cpp  HelloWorld.h  main.cpp
Samples/Physics/: CMakeLists.txt  Physics.cpp  Physics.h
Samples/Vehicle/: CMakeLists.txt  SampleVehicle.cpp  SampleVehicle.h  Types.cpp  Types.h
Tools/cpp/Editor/: CMakeLists.txt
(+6361 files in other folders)
